# advent-of-code

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  main.cpp  vcpkg.json
aoc_benchmarks/: CMakeLists.txt  aoc_2024_benchmarks.cc  aoc_2025_benchmarks.cc  aoc_benchmarks.h
aoc_lib/: aoc.cpp  aoc.h  aoc.hpp
aoc_lib/2020/01/: solver-2020-01.cpp
aoc_lib/2023/07/: solver-2023-07.cpp
aoc_lib/2023/08/: solver-2023-08.cpp
aoc_lib/2023/11/: solver-2023-11.cpp
aoc_lib/2023/13/: solver-2023-13.cpp
aoc_lib/2023/15/: solver-2023-15.cpp
aoc_lib/2023/16/: solver-2023-16.cpp
aoc_lib/2023/20/: solver-2023-20.cpp
aoc_lib/2023/21/: solver-2023-21.cpp
aoc_lib/2023/24/: solver-2023-24.cpp
aoc_lib/2023/25/: solver-2023-25.cpp
aoc_lib/2024/01/: solver-2024-01.cpp
aoc_lib/2024/02/: solver-2024-02.cpp
aoc_lib/2024/03/: solver-2024-03.cpp
aoc_lib/2024/04/: solver-2024-04.cpp
aoc_lib/2024/05/: solver-2024-05.cpp
aoc_lib/2024/06/: solver-2024-06.cpp
aoc_lib/2024/07/: solver-2024-07.cpp
aoc_lib/2024/08/: solver-2024-08.cpp
aoc_lib/2024/09/: solver-2024-09.cpp
aoc_lib/2024/10/: solver-2024-10.cpp
aoc_lib/2024/11/: solver-2024-11.cpp
aoc_lib/2024/12/: solver-2024-12.cpp
aoc_lib/2024/13/: solver-2024-13.cpp
aoc_lib/2024/14/: solver-2024-14.cpp
aoc_lib/2024/15/: solver-2024-15.cpp
aoc_lib/2024/16/: solver-2024-16.cpp
aoc_lib/2024/17/: solver-2024-17.cpp
aoc_lib/2024/18/: solver-2024-18.cpp
aoc_lib/2024/19/: solver-2024-19.cpp
aoc_lib/2024/20/: solver-2024-20.cpp
aoc_lib/2024/21/: solver-2024-21.cpp
aoc_lib/2024/22/: solver-2024-22.cpp
aoc_lib/2024/23/: solver-2024-23.cpp
aoc_lib/2024/24/: solver-2024-24.cpp
aoc_lib/2024/25/: solver-2024-25.cpp
aoc_lib/2025/01/: solver-2025-01.cpp
aoc_lib/2025/02/: solver-2025-02.cpp
aoc_lib/2025/03/: solver-2025-03.cpp
aoc_lib/2025/04/: solver-2025-04.cpp
aoc_lib/2025/05/: solver-2025-05.cpp
aoc_lib/2025/06/: solver-2025-06.cpp
aoc_lib/2025/07/: solver-2025-07.cpp
aoc_lib/2025/08/: solver-2025-08.cpp
aoc_lib/2025/09/: solver-2025-09.cpp
aoc_lib/2025/10/: solver-2025-10.cpp
aoc_lib/2025/11/: solver-2025-11.cpp
aoc_lib/2025/12/: solver-2025-12.cpp
aoc_tests/: CMakeLists.txt  aoc_2024_tests.cc  aoc_2025_tests.cc  aoc_tests.h
libs/: CMakeLists.txt
source/: aoc.cpp  aoc.hpp  main.cpp
source/2020/01/: solver.cpp
source/2023/01/: solver-2023-01.cpp  solver.cpp
source/2023/02/: solver-2023-02.cpp  solver.cpp
source/2023/03/: solver-2023-03.cpp  solver.cpp
source/2023/04/: solver-2023-04.cpp  solver.cpp
source/2023/05/: solver-2023-05.cpp
source/2023/06/: solver-2023-06.cpp  solver.cpp
source/2023/07/: solver-2023-07.cpp
source/2023/08/: solver-2023-08.cpp
source/2023/09/: solver-2023-09.cpp
source/2023/10/: solver-2023-10.cpp
source/2023/12/: solver-2023-12.cpp
source/2023/13/: solver-2023-13.cpp
source/2023/14/: solver-2023-14.cpp
source/2023/17/: solver-2023-17.cpp
source/2023/18/: solver-2023-18.cpp
source/2023/19/: solver-2023-19.cpp
source/2023/22/: solver-2023-22.cpp
source/2023/23/: solver-2023-23.cpp
source/2024/01/: solver-2024-01.cpp
source/2024/02/: solver-2024-02.cpp
source/2024/03/: solver-2024-03.cpp
source/2024/04/: solver-2024-04.cpp
source/2024/05/: solver-2024-05.cpp
source/2024/06/: solver-2024-06.cpp
source/2024/07/: solver-2024-07.cpp
source/2024/08/: solver-2024-08.cpp
source/2024/09/: solver-2024-09.cpp
source/2024/10/: solver-2024-10.cpp
source/2024/11/: solver-2024-11.cpp
source/2024/12/: solver-2024-12.cpp
source/2024/13/: solver-2024-13.cpp
source/2024/14/: solver-2024-14.cpp
source/2024/15/: solver-2024-15.cpp
source/2024/16/: solver-2024-16.cpp
source/2024/17/: solver-2024-17.cpp
source/2024/18/: solver-2024-18.cpp
source/2024/19/: solver-2024-19.cpp
source/2024/20/: solver-2024-20.cpp
source/2024/21/: solver-2024-21.cpp
source/2024/22/: solver-2024-22.cpp
source/2024/23/: solver-2024-23.cpp
source/2024/24/: solver-2024-24.cpp
source/2024/25/: solver-2024-25.cpp
